# finsight

./: CMakeLists.txt  README.md  conanfile.py  makefile  pyproject.toml
src/: main.py
src/algorithm/signal/: ohlcv_vwap.py
src/algorithm/util/: messages.py
src/cppsrc/: main.cpp
src/website/: __init__.py  views.py
src/website/templates/: base.html  chat.html  home.html
test/integration/: test_basic_integration.cpp
test/unit/: test_basic.py
