[project]
name = "finsight"
version = "0.1.0"
description = ""
authors = [
    {name = "William Brittian, Romanos Chiliarchopoulos, Hyundo Jung, Ozan Kan"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.11.4,<0.12.0)",
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
